--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/chilliconcarne.html">Chilli Con Carne</a></li>
+        <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+    </ul>
 </body>
 
 </html>
