--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/chilliconcarne.html">Chilli Con Carne</a></li>
-        <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+        <li><a href="recipes/eggfriedrice.html">Egg Fried Rice</a></li>
     </ul>
 </body>
 
